default/objects/E2EFormData__c/E2EFormData__c.object-meta.xml
<CustomObject>
    <description>Store data from E2E Form</description>
    <label>E2E Form Ru Data</label>
    <nameField>
        <displayFormat>E2ERU{00000000}</displayFormat>
        <label>E2EFormRuData  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E2E Form Ru Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>