default/objects/E2EFormData__c/fields/E2E_Account_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>E2E_Account_Short_Name__c</fullName>
    <label>Account Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>