default/objects/E2EFormData__c/fields/E2E_Bank__c.field-meta.xml
<CustomField>
    <fullName>E2E_Bank__c</fullName>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>