default/objects/E2EFormData__c/fields/E2E_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>E2E_Bank_Address__c</fullName>
    <description>Адрес банка</description>
    <label>Bank address</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>