default/objects/E2EFormData__c/fields/E2E_Bank_Information_Invalid__c.field-meta.xml
<CustomField>
    <fullName>E2E_Bank_Information_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Information Invalid</label>
    <type>Checkbox</type>
</CustomField>