default/objects/E2EFormData__c/fields/E2E_Bank_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>E2E_Bank_Name_Short__c</fullName>
    <description>Короткое название банка</description>
    <label>Bank name (short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>