default/objects/E2EFormData__c/fields/E2E_Bank_OKPO__c.field-meta.xml
<CustomField>
    <fullName>E2E_Bank_OKPO__c</fullName>
    <description>ОКПО банка</description>
    <label>Bank OKPO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>