default/objects/E2EFormData__c/fields/E2E_Bank_Town__c.field-meta.xml
<CustomField>
    <fullName>E2E_Bank_Town__c</fullName>
    <description>Город банка</description>
    <label>Bank town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>