default/objects/E2EFormData__c/fields/E2E_BIC__c.field-meta.xml
<CustomField>
    <fullName>E2E_BIC__c</fullName>
    <label>Bank BIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>