default/objects/E2EFormData__c/fields/E2E_Billing_Apartment__c.field-meta.xml
<CustomField>
    <fullName>E2E_Billing_Apartment__c</fullName>
    <label>Billing Appartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>