default/objects/E2EFormData__c/fields/E2E_Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>E2E_Billing_Code__c</fullName>
    <label>Billing zip code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>