default/objects/E2EFormData__c/fields/E2E_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>E2E_Billing_Country__c</fullName>
    <label>Billing country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>