default/objects/E2EFormData__c/fields/E2E_Black_List__c.field-meta.xml
<CustomField>
    <fullName>E2E_Black_List__c</fullName>
    <description>Проверка по ЧЧС</description>
    <label>Black list</label>
    <length>255</length>
    <type>Text</type>
</CustomField>