default/objects/E2EFormData__c/fields/E2E_Black_List_Code__c.field-meta.xml
<CustomField>
    <fullName>E2E_Black_List_Code__c</fullName>
    <description>Код проверки по ЧЧС</description>
    <label>Black list code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>