default/objects/E2EFormData__c/fields/E2E_Black_List_Limitations__c.field-meta.xml
<CustomField>
    <fullName>E2E_Black_List_Limitations__c</fullName>
    <description>Максимальный срок отсрочки платежа, если ответ на проверку «ограничение по отсрочке»</description>
    <label>Scoring limitations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>