default/objects/E2EFormData__c/fields/E2E_Checking_Account__c.field-meta.xml
<CustomField>
    <fullName>E2E_Checking_Account__c</fullName>
    <label>Checking account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>