default/objects/E2EFormData__c/fields/E2E_Chief_Accountant__c.field-meta.xml
<CustomField>
    <fullName>E2E_Chief_Accountant__c</fullName>
    <description>Initials</description>
    <label>Сhief Accountant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>