default/objects/E2EFormData__c/fields/E2E_Code_Word__c.field-meta.xml
<CustomField>
    <fullName>E2E_Code_Word__c</fullName>
    <label>Client code word</label>
    <length>100</length>
    <type>Text</type>
</CustomField>