default/objects/E2EFormData__c/fields/E2E_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>E2E_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>