default/objects/E2EFormData__c/fields/E2E_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>E2E_Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>