default/objects/E2EFormData__c/fields/E2E_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>E2E_Contract_Number__c</fullName>
    <label>Contract number</label>
    <length>125</length>
    <type>Text</type>
</CustomField>