default/objects/E2EFormData__c/fields/E2E_Cor_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>E2E_Cor_Bank_Account__c</fullName>
    <label>Сorrespondent bank account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>