default/objects/E2EFormData__c/fields/E2E_Courier_Comments__c.field-meta.xml
<CustomField>
    <fullName>E2E_Courier_Comments__c</fullName>
    <description>Комментарий для курьерской службы</description>
    <label>Comments for courier service</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>