default/objects/E2EFormData__c/fields/E2E_Dedup_Status__c.field-meta.xml
<CustomField>
    <fullName>E2E_Dedup_Status__c</fullName>
    <description>Статус после процесса дедубликации</description>
    <label>Deduplication status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>