default/objects/E2EFormData__c/fields/E2E_Dedup_Status_Info__c.field-meta.xml
<CustomField>
    <fullName>E2E_Dedup_Status_Info__c</fullName>
    <label>Deduplication status information</label>
    <type>TextArea</type>
</CustomField>