default/objects/E2EFormData__c/fields/E2E_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>E2E_Device_Type__c</fullName>
    <label>Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>