default/objects/E2EFormData__c/fields/E2E_Empty_SPARK_OKPO__c.field-meta.xml
<CustomField>
    <fullName>E2E_Empty_SPARK_OKPO__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if SPARK does not have OKPO information</description>
    <inlineHelpText>Checked if SPARK does not have OKPO information</inlineHelpText>
    <label>Empty SPARK OKPO</label>
    <type>Checkbox</type>
</CustomField>