default/objects/E2EFormData__c/fields/E2E_Executive_Person__c.field-meta.xml
<CustomField>
    <fullName>E2E_Executive_Person__c</fullName>
    <description>Position and Executive initials</description>
    <label>Executive Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>