default/objects/E2EFormData__c/fields/E2E_Executive_Person_Manual__c.field-meta.xml
<CustomField>
    <fullName>E2E_Executive_Person_Manual__c</fullName>
    <label>Executive Person Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>