default/objects/E2EFormData__c/fields/E2E_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>E2E_Form_URL__c</fullName>
    <description>Ссылка по этапам для отправки клиенту</description>
    <label>Form url for client</label>
    <type>Url</type>
</CustomField>