default/objects/E2EFormData__c/fields/E2E_INN__c.field-meta.xml
<CustomField>
    <fullName>E2E_INN__c</fullName>
    <label>INN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>