default/objects/E2EFormData__c/fields/E2E_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>E2E_IP_Address__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>