default/objects/E2EFormData__c/fields/E2E_KPP__c.field-meta.xml
<CustomField>
    <fullName>E2E_KPP__c</fullName>
    <label>KPP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>