default/objects/E2EFormData__c/fields/E2E_Last_Launch__c.field-meta.xml
<CustomField>
    <fullName>E2E_Last_Launch__c</fullName>
    <label>E2E Last Launch</label>
    <type>DateTime</type>
</CustomField>