default/objects/E2EFormData__c/fields/E2E_Last_Step__c.field-meta.xml
<CustomField>
    <fullName>E2E_Last_Step__c</fullName>
    <description>Where the customer end his journey</description>
    <label>Last Step</label>
    <length>50</length>
    <type>Text</type>
</CustomField>