default/objects/E2EFormData__c/fields/E2E_Legal_Address__c.field-meta.xml
<CustomField>
    <fullName>E2E_Legal_Address__c</fullName>
    <label>Legal address</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>