default/objects/E2EFormData__c/fields/E2E_Main_Company_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>E2E_Main_Company_Full_Name__c</fullName>
    <description>Название головной компании из СПАРК</description>
    <label>Main company full name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>