default/objects/E2EFormData__c/fields/E2E_Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>E2E_Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>