default/objects/E2EFormData__c/fields/E2E_Num_Cards__c.field-meta.xml
<CustomField>
    <fullName>E2E_Num_Cards__c</fullName>
    <label>Number of cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>