default/objects/E2EFormData__c/fields/E2E_Offer__c.field-meta.xml
<CustomField>
    <fullName>E2E_Offer__c</fullName>
    <label>Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>