default/objects/E2EFormData__c/fields/E2E_OGRN__c.field-meta.xml
<CustomField>
    <fullName>E2E_OGRN__c</fullName>
    <label>OGRN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>