default/objects/E2EFormData__c/fields/E2E_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>E2E_Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>E2E Form Ru Data</relationshipLabel>
    <relationshipName>E2EFormRuData</relationshipName>
    <type>Lookup</type>
</CustomField>