default/objects/E2EFormData__c/fields/E2E_Overdraft_srv__c.field-meta.xml
<CustomField>
    <fullName>E2E_Overdraft_srv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overdraft</label>
    <type>Checkbox</type>
</CustomField>