default/objects/E2EFormData__c/fields/E2E_Payment_Condition__c.field-meta.xml
<CustomField>
    <fullName>E2E_Payment_Condition__c</fullName>
    <label>Payment conditions</label>
    <length>155</length>
    <type>Text</type>
</CustomField>