default/objects/E2EFormData__c/fields/E2E_Personal_Manager_srv__c.field-meta.xml
<CustomField>
    <fullName>E2E_Personal_Manager_srv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Manager service</label>
    <type>Checkbox</type>
</CustomField>