default/objects/E2EFormData__c/fields/E2E_Personal_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>E2E_Personal_Office_Email__c</fullName>
    <description>Email, на который будет подключен доступ в Личный Кабинет</description>
    <label>Personal office email</label>
    <type>Email</type>
</CustomField>