default/objects/E2EFormData__c/fields/E2E_Prepay_Amount__c.field-meta.xml
<CustomField>
    <fullName>E2E_Prepay_Amount__c</fullName>
    <label>Pre-payment amount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>