default/objects/E2EFormData__c/fields/E2E_Process_Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>E2E_Process_Personal_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to process personal data</label>
    <type>Checkbox</type>
</CustomField>