default/objects/E2EFormData__c/fields/E2E_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>E2E_Process_Status__c</fullName>
    <description>Статусы успешно пройденных процессов по форме E2E</description>
    <label>Process status</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>