default/objects/E2EFormData__c/fields/E2E_Product__c.field-meta.xml
<CustomField>
    <fullName>E2E_Product__c</fullName>
    <label>Product</label>
    <length>150</length>
    <type>Text</type>
</CustomField>