default/objects/E2EFormData__c/fields/E2E_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>E2E_Product_Id__c</fullName>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>