default/objects/E2EFormData__c/fields/E2E_Promo_Campaign__c.field-meta.xml
<CustomField>
    <fullName>E2E_Promo_Campaign__c</fullName>
    <label>Promo code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>