default/objects/E2EFormData__c/fields/E2E_Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>E2E_Reg_Date__c</fullName>
    <description>Дата регистрации компании</description>
    <label>Registration date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>