default/objects/E2EFormData__c/fields/E2E_Req_Num_MZK__c.field-meta.xml
<CustomField>
    <fullName>E2E_Req_Num_MZK__c</fullName>
    <description>Номер заявки в Модуле Заказа Карт</description>
    <label>Request number MZK</label>
    <length>25</length>
    <type>Text</type>
</CustomField>