default/objects/E2EFormData__c/fields/E2E_Scoring_Date__c.field-meta.xml
<CustomField>
    <fullName>E2E_Scoring_Date__c</fullName>
    <description>Дата скоринга</description>
    <label>Scoring date</label>
    <type>Date</type>
</CustomField>