default/objects/E2EFormData__c/fields/E2E_Scoring_Decision__c.field-meta.xml
<CustomField>
    <fullName>E2E_Scoring_Decision__c</fullName>
    <description>Решение после скоринга</description>
    <label>Scoring decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>