default/objects/E2EFormData__c/fields/E2E_Scoring_Decision_Code__c.field-meta.xml
<CustomField>
    <fullName>E2E_Scoring_Decision_Code__c</fullName>
    <description>Код решения после скоринга</description>
    <label>Scoring decision code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>