default/objects/E2EFormData__c/fields/E2E_Scoring_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>E2E_Scoring_Expiration_Date__c</fullName>
    <description>Дата, когда истекает срок действия скорингового решения</description>
    <label>Scoring expiration date</label>
    <type>Date</type>
</CustomField>