default/objects/E2EFormData__c/fields/E2E_Send_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>E2E_Send_Marketing_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Marketing Email</label>
    <type>Checkbox</type>
</CustomField>