default/objects/E2EFormData__c/fields/E2E_Shipping_House__c.field-meta.xml
<CustomField>
    <fullName>E2E_Shipping_House__c</fullName>
    <label>Shipping House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>