default/objects/E2EFormData__c/fields/E2E_Shipping_Str__c.field-meta.xml
<CustomField>
    <fullName>E2E_Shipping_Str__c</fullName>
    <label>Shipping street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>