default/objects/E2EFormData__c/fields/E2E_Source__c.field-meta.xml
<CustomField>
    <fullName>E2E_Source__c</fullName>
    <label>Source</label>
    <length>125</length>
    <type>Text</type>
</CustomField>