default/objects/E2EFormData__c/fields/E2E_Spark_Id__c.field-meta.xml
<CustomField>
    <fullName>E2E_Spark_Id__c</fullName>
    <description>Идентификатор компании в системе СПАРК</description>
    <label>Spark Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>