default/objects/E2EFormData__c/fields/E2E_Split_Testing__c.field-meta.xml
<CustomField>
    <fullName>E2E_Split_Testing__c</fullName>
    <label>Split Testing</label>
    <type>TextArea</type>
</CustomField>