default/objects/E2EFormData__c/fields/E2E_Split_WTL__c.field-meta.xml
<CustomField>
    <fullName>E2E_Split_WTL__c</fullName>
    <label>E2E Split WTL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>