default/objects/E2EFormData__c/fields/E2E_Transit_Cont_Id__c.field-meta.xml
<CustomField>
    <fullName>E2E_Transit_Cont_Id__c</fullName>
    <description>Id контрагента из Транзит</description>
    <label>Transit cont id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>