default/objects/E2EFormData__c/fields/Free_overdraft__c.field-meta.xml
<CustomField>
    <fullName>Free_overdraft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provides free overdraft for customer</description>
    <inlineHelpText>Provides free overdraft for customer</inlineHelpText>
    <label>Free overdraft</label>
    <type>Checkbox</type>
</CustomField>