default/objects/E2EFormData__c/fields/Last_deduplication_time__c.field-meta.xml
<CustomField>
    <fullName>Last_deduplication_time__c</fullName>
    <description>Date &amp; time of last deduplication process</description>
    <inlineHelpText>Date &amp; time of last deduplication process</inlineHelpText>
    <label>Last deduplication time</label>
    <type>DateTime</type>
</CustomField>