default/objects/E2EFormData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>E2E_Contact_Email__c</columns>
    <columns>E2E_Contact_Phone__c</columns>
    <columns>E2E_INN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>